# p3_ai_projects

./: .gitignore
cnns/: Images_and_Filters.ipynb  Images_and_Filters.py  README.md
cnns/aslcnn/: main-modified.py  main.py  test.py
cnns/aslproj/: best_asl_classifier_top5.pt  main.py  measure.py  rian.txt  test.py
cnns/aslproj/stor/: download.py  eval.py  requirements.txt  secrettest.py  test-bak.py  test-stack.py  test.py  transfer4060.sh  webcam_asl_hf.py
cnns/aslproj/stor/0/: model_weights.pth  validation_report.json  validation_report.txt
cnns/aslproj/stor/1/: config.json
cnns/aslproj/stor/11/: config.json
cnns/aslproj/stor/12/: metrics.csv
cnns/test/: Images_and_Filters.ipynb
knntest/: test.py
langflow/: .env.example  DEPLOYMENT.md  Dockerfile  HUGGINGFACE.md  README.md  app.py  client.py  docker-compose.yml  docker.sh  langflow_client.py  main.py  pyproject.toml  requirements-docker.txt  requirements.txt  streamlit_app.py  test.py  test_extract_text.py  test_langflow.py
langflow/src/: __init__.py  api.py  bot.py  openai_config.py  security.py  system_prompt.py
langflow/tests/: __init__.py  test_openai_config.py  test_prompts.py
linregproject/: getdata.py  main.py
logregproject/: gptconvo.txt  logregskele.ipynb  logregtest.py
nlptest/: README.md  first.ipynb  getdata.py  gpt.txt  sentimentanalysis.ipynb
numsnn/: gpt.txt  main.py  simplenn.pth  skeleton.ipynb  thing.py
t1final/: README.md  gptconvo.txt  skelebook.ipynb  skelebook.py
t2final/: gpt.txt  requirements.txt  t2_final_2_test.ipynb  t2final_1.ipynb  t2final_2.ipynb
(+60 files in other folders)
