[project]
name = "langflow-local-clients"
version = "0.1.0"
description = "Thin Gradio and Streamlit frontends for a local Langflow flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.49.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
